<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kaiako</string>
    <string name="action_settings">Settings</string>

    <!-- Login Activity -->
    <string name="sign_in">Sign In</string>
    <string name="hint_username">enter your username</string>
    <string name="hint_password">enter your password</string>
    <string name="authenticating">authenticating</string>
    <string name="invalid_credentials">Sorry you\'ve entered incorrect login details, please try again</string>

    <!-- Coverflow -->
    <string name="title_book_worksheets_completed">Completed</string>
    <string name="title_book_worksheets_assigned">Assigned</string>
    <string name="title_book_assessments">Assessment</string>
    <string name="toast_worksheets_fetched">Worsheets updated</string>
    <string name="img_cover_flow_book">Homework Book</string>
    <string name="fragment_preview_label_questions">Number of questions:</string>
    <string name="label_worksheet_duration">Estimated duration:</string>
    <string name="label_difficulty_level">Difficulty level:</string>
    <string name="label_assigned_date">Assigned date:</string>
    <string name="label_status">Status:</string>
    <string name="label_time_taken">Time taken:</string>
    <string name="minutes">&#160;minutes</string>

</resources>
