<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/margin_default_half"
    android:weightSum="2"
    android:background="@drawable/background_rounded_corners">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="@dimen/margin_default"
        android:background="@drawable/background_white_corners_round">

        <TextView
            android:id="@+id/fragment_preview_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/fragment_preview_question">

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/ic_dinner_table"
                android:layout_marginRight="@dimen/margin_default" />

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/ic_dinner_table"
                android:layout_marginRight="@dimen/margin_default" />

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/ic_dinner_table" />
        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="@dimen/margin_default_half"
        android:paddingLeft="@dimen/margin_default_half"
        android:paddingRight="@dimen/margin_default_half">

        <com.rsd.tutor.custom.RobotoThinTextView
            android:id="@+id/fragment_preview_worksheet_id"
            style="@style/label_micro"
            android:layout_marginBottom="@dimen/margin_default_half" />

        <com.rsd.tutor.custom.RobotoBoldTextView
            android:id="@+id/fragment_preview_worksheet_lesson_category"
            style="@style/label_large"
            android:layout_marginBottom="@dimen/margin_default"
            android:layout_below="@id/fragment_preview_worksheet_id" />

        <com.rsd.tutor.custom.RobotoLightTextView
            android:id="@+id/fragment_preview_worksheet_number_of_questions_label"
            style="@style/preview_label"
            android:text="@string/fragment_preview_label_questions"
            android:layout_below="@id/fragment_preview_worksheet_lesson_category" />

        <TextView
            android:id="@+id/fragment_preview_worksheet_number_of_questions"
            style="@style/label_small"
            android:layout_below="@id/fragment_preview_worksheet_lesson_category"
            android:layout_toRightOf="@id/fragment_preview_worksheet_number_of_questions_label" />

        <com.rsd.tutor.custom.RobotoLightTextView
            android:id="@+id/fragment_preview_worksheet_duration_label"
            style="@style/preview_label"
            android:text="@string/label_worksheet_duration"
            android:layout_below="@id/fragment_preview_worksheet_number_of_questions_label" />

        <TextView
            android:id="@+id/fragment_preview_worksheet_duration"
            style="@style/label_small"
            android:layout_below="@id/fragment_preview_worksheet_number_of_questions_label"
            android:layout_toRightOf="@id/fragment_preview_worksheet_duration_label" />

        <com.rsd.tutor.custom.RobotoLightTextView
            android:id="@+id/fragment_preview_worksheet_difficulty_label"
            style="@style/preview_label"
            android:text="@string/label_difficulty_level"
            android:layout_below="@id/fragment_preview_worksheet_duration_label" />

        <TextView
            android:id="@+id/fragment_preview_worksheet_difficulty"
            style="@style/label_small"
            android:layout_below="@id/fragment_preview_worksheet_duration_label"
            android:layout_toRightOf="@id/fragment_preview_worksheet_difficulty_label" />

        <com.rsd.tutor.custom.RobotoLightTextView
            android:id="@+id/fragment_preview_worksheet_assigned_label"
            style="@style/preview_label"
            android:text="@string/label_assigned_date"
            android:layout_below="@id/fragment_preview_worksheet_difficulty_label" />

        <TextView
            android:id="@+id/fragment_preview_worksheet_assigned"
            style="@style/label_small"
            android:layout_below="@id/fragment_preview_worksheet_difficulty_label"
            android:layout_toRightOf="@id/fragment_preview_worksheet_assigned_label" />

        <com.rsd.tutor.custom.RobotoLightTextView
            android:id="@+id/fragment_preview_worksheet_status_label"
            style="@style/preview_label"
            android:text="@string/label_status"
            android:layout_below="@id/fragment_preview_worksheet_assigned_label" />

        <TextView
            android:id="@+id/fragment_preview_worksheet_status"
            style="@style/label_small"
            android:layout_below="@id/fragment_preview_worksheet_assigned_label"
            android:layout_toRightOf="@id/fragment_preview_worksheet_assigned_label" />

        <com.rsd.tutor.custom.RobotoLightTextView
            android:id="@+id/fragment_preview_worksheet_time_taken_label"
            style="@style/preview_label"
            android:text="@string/label_time_taken"
            android:layout_below="@id/fragment_preview_worksheet_status_label" />

        <TextView
            android:id="@+id/fragment_preview_worksheet_time_taken"
            style="@style/label_small"
            android:text="Not started"
            android:layout_below="@id/fragment_preview_worksheet_status_label"
            android:layout_toRightOf="@id/fragment_preview_worksheet_time_taken_label" />

        <ImageButton
            android:id="@+id/fragment_preview_worksheet_bt"
            style="@style/button_base_color"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:src="@drawable/ic_play" />

    </RelativeLayout>

</LinearLayout>